# hack-ai

./: .env  README.md  frontend.py  pyproject.toml  test-agent.py
src/: .env  agent1q20cgjnqr3_data.json  config.json  main.py
src/agents/currency/: README.md  currency.py
src/agents/news/: README.md  news.py
src/data/: agent_data.json  config.json
src/messages/: currency_request.py  general.py  news_request.py
src/utils/: summarizer.py
